# engdataops-blog

./: CNAME  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: .authors.yml  index.md
docs/posts/: first_post.md
hooks/: socialmedia.py
