[project]
name = "engdataops-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "alfredo",email = "alfredojoseneto@gmail.com"}
]
readme = "README.md"
requires-python = "3.14.0"
dependencies = [
    "jinja2 (>=3.0,<4.0)",
    "mkdocs-glightbox (>=0.4.0,<0.5.0)",
    "markdown (>=3.2,<4.0)",
    "mkdocs (>=1.6,<2.0)",
    "mkdocs-material (>=9.5.46,<9.6.0)",
    "mkdocs-material-extensions (>=1.3,<2.0)",
    "pygments (>=2.16,<3.0)",
    "pymdown-extensions (>=10.2,<11.0)",
    "babel (>=2.10,<3.0)",
    "colorama (>=0.4,<1.0)",
    "paginate (>=0.5,<1.0)",
    "regex (>=2022.4)",
    "requests (>=2.26,<3.0)",
    "mkdocs-get-deps (>=0.2.0,<0.3.0)",
    "mkdocs-minify-plugin (>=0.8.0,<0.9.0)",
    "mkdocs-git-committers-plugin-2 (>=2.4.1,<2.5.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.3.0,<1.4.0)",
    "mkdocs-rss-plugin (>=1.16.0,<1.17.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
